// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Balance sheet tests Balance sheet page displays an empty view when no enough data is available 1`] = `
<div
  class="eHSBpH"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="fagWyk"
  >
    <div
      class="jAhLsL"
    >
      <div
        class="jtiQiL"
      >
        <h1
          class="hNZCJQ"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="cxGfAR"
        >
          <button
            class="fQYTKD"
            type="button"
          >
            Add new
          </button>
          <button
            class="fQYTKD"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="fUckcR"
  >
    <div
      class="PJmAb"
    >
      <header
        class="iGWxFg"
      >
        <h2
          class="gTAXam"
        >
          Balances
        </h2>
        <div>
          <nav
            class="dDdRjc"
          >
            <div
              class="dAAFPm"
            >
              all 
            </div>
            <div
              class="gDxUWx"
            >
              accounts 1
            </div>
            <div
              class="gDxUWx"
            >
              assets 0
            </div>
          </nav>
        </div>
      </header>
      <div
        class="dqUUkh"
      >
        <div
          class="bgaVJI"
          data-testid="balance-group-cash"
        >
          <div
            class="fqIxbX"
          >
            <p
              class="dBzXnv"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="bqilBU"
            >
              $0
            </span>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                undefined
              </div>
              <span
                class="bJfVYR"
              >
                $0
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/account/Alice's Checking"
                >
                  Alice's Checking
                </a>
                <div
                  class="kkLQiS"
                >
                  Account
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $0
              </span>
            </div>
          </div>
        </div>
        <div
          class="bgaVJI"
          data-testid="balance-group-debt"
        >
          <div
            class="mCiyX"
          >
            <p
              class="dBzXnv"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="bqilBU"
            >
              $0
            </span>
          </div>
          <div
            class="bIsif"
          >
            No balances are available in this group.
          </div>
        </div>
        <div
          class="bgaVJI"
          data-testid="balance-group-investments"
        >
          <div
            class="fCfgKI"
          >
            <p
              class="dBzXnv"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="bqilBU"
            >
              $0
            </span>
          </div>
          <div
            class="bIsif"
          >
            No balances are available in this group.
          </div>
        </div>
        <div
          class="bgaVJI"
          data-testid="balance-group-other-assets"
        >
          <div
            class="gUWRgq"
          >
            <p
              class="dBzXnv"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="bqilBU"
            >
              $0
            </span>
          </div>
          <div
            class="bIsif"
          >
            No balances are available in this group.
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Balance sheet tests Balance sheet page displays the correct data 1`] = `
<div
  class="eHSBpH"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="fagWyk"
  >
    <div
      class="jAhLsL"
    >
      <div
        class="jtiQiL"
      >
        <h1
          class="hNZCJQ"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="cxGfAR"
        >
          <button
            class="fQYTKD"
            type="button"
          >
            Add new
          </button>
          <button
            class="fQYTKD"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="fUckcR"
  >
    <div
      class="PJmAb"
    >
      <header
        class="iGWxFg"
      >
        <h2
          class="gTAXam"
        >
          Balances
        </h2>
        <div>
          <nav
            class="dDdRjc"
          >
            <div
              class="dAAFPm"
            >
              all 
            </div>
            <div
              class="gDxUWx"
            >
              accounts 7
            </div>
            <div
              class="gDxUWx"
            >
              assets 6
            </div>
          </nav>
        </div>
      </header>
      <div
        class="dqUUkh"
      >
        <div
          class="bgaVJI"
          data-testid="balance-group-cash"
        >
          <div
            class="fqIxbX"
          >
            <p
              class="dBzXnv"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="bqilBU"
            >
              $10,700
            </span>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                savings
              </div>
              <span
                class="bJfVYR"
              >
                $6,000
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/account/Emergency Fund"
                >
                  Emergency Fund
                </a>
                <div
                  class="kkLQiS"
                >
                  Account
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $6,000
              </span>
            </div>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                checking
              </div>
              <span
                class="bJfVYR"
              >
                $3,400
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/account/Alice's Checking"
                >
                  Alice's Checking
                </a>
                <div
                  class="kkLQiS"
                >
                  Account
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $3,400
              </span>
            </div>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                cash
              </div>
              <span
                class="bJfVYR"
              >
                $1,300
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/account/Wallet"
                >
                  Wallet
                </a>
                <div
                  class="kkLQiS"
                >
                  Account
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $1,300
              </span>
            </div>
          </div>
        </div>
        <div
          class="bgaVJI"
          data-testid="balance-group-debt"
        >
          <div
            class="mCiyX"
          >
            <p
              class="dBzXnv"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="bqilBU"
            >
              -$21,974
            </span>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                credit card
              </div>
              <span
                class="bJfVYR"
              >
                -$724
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/account/Bob's Juggernaut Visa"
                >
                  Bob's Juggernaut Visa
                </a>
                <div
                  class="kkLQiS"
                >
                  Account
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                -$724
              </span>
            </div>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                auto
              </div>
              <span
                class="bJfVYR"
              >
                -$21,250
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/account/Toyota Auto Loan"
                >
                  Toyota Auto Loan
                </a>
                <div
                  class="kkLQiS"
                >
                  Account
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                -$21,250
              </span>
            </div>
          </div>
        </div>
        <div
          class="bgaVJI"
          data-testid="balance-group-investments"
        >
          <div
            class="fCfgKI"
          >
            <p
              class="dBzXnv"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="bqilBU"
            >
              $142,831
            </span>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                cryptocurrency
              </div>
              <span
                class="bJfVYR"
              >
                $86,920
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/asset/Bitcoin"
                >
                  Bitcoin
                </a>
                <div
                  class="kkLQiS"
                >
                  Asset
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $69,420
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/asset/Ethereum"
                >
                  Ethereum
                </a>
                <div
                  class="kkLQiS"
                >
                  Asset
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $17,500
              </span>
            </div>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                security
              </div>
              <span
                class="bJfVYR"
              >
                $33,125
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/asset/Tesla"
                >
                  Tesla
                </a>
                <div
                  class="kkLQiS"
                >
                  Asset
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $30,000
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/asset/GameStop"
                >
                  GameStop
                </a>
                <div
                  class="kkLQiS"
                >
                  Asset
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $3,125
              </span>
            </div>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                roth
              </div>
              <span
                class="bJfVYR"
              >
                $18,536
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/account/Alice's Roth IRA"
                >
                  Alice's Roth IRA
                </a>
                <div
                  class="kkLQiS"
                >
                  Account
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $18,536
              </span>
            </div>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                401k
              </div>
              <span
                class="bJfVYR"
              >
                $4,251
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/account/Bob's 401k"
                >
                  Bob's 401k
                </a>
                <div
                  class="kkLQiS"
                >
                  Account
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $4,251
              </span>
            </div>
          </div>
        </div>
        <div
          class="bgaVJI"
          data-testid="balance-group-other-assets"
        >
          <div
            class="gUWRgq"
          >
            <p
              class="dBzXnv"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="bqilBU"
            >
              $53,000
            </span>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                vehicle
              </div>
              <span
                class="bJfVYR"
              >
                $38,500
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/asset/2022 Toyota RAV4"
                >
                  2022 Toyota RAV4
                </a>
                <div
                  class="kkLQiS"
                >
                  Asset
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $38,500
              </span>
            </div>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                collectible
              </div>
              <span
                class="bJfVYR"
              >
                $14,500
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/asset/Pokemon Card Collection"
                >
                  Pokemon Card Collection
                </a>
                <div
                  class="kkLQiS"
                >
                  Asset
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $14,500
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Balance sheet tests Balance sheet page displays the correct data 2`] = `
<div
  class="eHSBpH"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="fagWyk"
  >
    <div
      class="jAhLsL"
    >
      <div
        class="jtiQiL"
      >
        <h1
          class="hNZCJQ"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="cxGfAR"
        >
          <button
            class="fQYTKD"
            type="button"
          >
            Add new
          </button>
          <button
            class="fQYTKD"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="fUckcR"
  >
    <div
      class="PJmAb"
    >
      <header
        class="iGWxFg"
      >
        <h2
          class="gTAXam"
        >
          Balances
        </h2>
        <div>
          <nav
            class="dDdRjc"
          >
            <div
              class="gDxUWx"
            >
              all 
            </div>
            <div
              class="dAAFPm"
            >
              accounts 7
            </div>
            <div
              class="gDxUWx"
            >
              assets 6
            </div>
          </nav>
        </div>
      </header>
      <div
        class="dqUUkh"
      >
        <div
          class="bgaVJI"
          data-testid="balance-group-cash"
        >
          <div
            class="fqIxbX"
          >
            <p
              class="dBzXnv"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="bqilBU"
            >
              $10,700
            </span>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                savings
              </div>
              <span
                class="bJfVYR"
              >
                $6,000
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/account/Emergency Fund"
                >
                  Emergency Fund
                </a>
                <div
                  class="kkLQiS"
                >
                  Account
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $6,000
              </span>
            </div>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                checking
              </div>
              <span
                class="bJfVYR"
              >
                $3,400
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/account/Alice's Checking"
                >
                  Alice's Checking
                </a>
                <div
                  class="kkLQiS"
                >
                  Account
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $3,400
              </span>
            </div>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                cash
              </div>
              <span
                class="bJfVYR"
              >
                $1,300
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/account/Wallet"
                >
                  Wallet
                </a>
                <div
                  class="kkLQiS"
                >
                  Account
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $1,300
              </span>
            </div>
          </div>
        </div>
        <div
          class="bgaVJI"
          data-testid="balance-group-debt"
        >
          <div
            class="mCiyX"
          >
            <p
              class="dBzXnv"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="bqilBU"
            >
              -$21,974
            </span>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                credit card
              </div>
              <span
                class="bJfVYR"
              >
                -$724
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/account/Bob's Juggernaut Visa"
                >
                  Bob's Juggernaut Visa
                </a>
                <div
                  class="kkLQiS"
                >
                  Account
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                -$724
              </span>
            </div>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                auto
              </div>
              <span
                class="bJfVYR"
              >
                -$21,250
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/account/Toyota Auto Loan"
                >
                  Toyota Auto Loan
                </a>
                <div
                  class="kkLQiS"
                >
                  Account
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                -$21,250
              </span>
            </div>
          </div>
        </div>
        <div
          class="bgaVJI"
          data-testid="balance-group-investments"
        >
          <div
            class="fCfgKI"
          >
            <p
              class="dBzXnv"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="bqilBU"
            >
              $22,786
            </span>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                roth
              </div>
              <span
                class="bJfVYR"
              >
                $18,536
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/account/Alice's Roth IRA"
                >
                  Alice's Roth IRA
                </a>
                <div
                  class="kkLQiS"
                >
                  Account
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $18,536
              </span>
            </div>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                401k
              </div>
              <span
                class="bJfVYR"
              >
                $4,251
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/account/Bob's 401k"
                >
                  Bob's 401k
                </a>
                <div
                  class="kkLQiS"
                >
                  Account
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $4,251
              </span>
            </div>
          </div>
        </div>
        <div
          class="bgaVJI"
          data-testid="balance-group-other-assets"
        >
          <div
            class="gUWRgq"
          >
            <p
              class="dBzXnv"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="bqilBU"
            >
              $0
            </span>
          </div>
          <div
            class="bIsif"
          >
            No balances are available in this group.
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Balance sheet tests Balance sheet page displays the correct data 3`] = `
<div
  class="eHSBpH"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="fagWyk"
  >
    <div
      class="jAhLsL"
    >
      <div
        class="jtiQiL"
      >
        <h1
          class="hNZCJQ"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="cxGfAR"
        >
          <button
            class="fQYTKD"
            type="button"
          >
            Add new
          </button>
          <button
            class="fQYTKD"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="fUckcR"
  >
    <div
      class="PJmAb"
    >
      <header
        class="iGWxFg"
      >
        <h2
          class="gTAXam"
        >
          Balances
        </h2>
        <div>
          <nav
            class="dDdRjc"
          >
            <div
              class="gDxUWx"
            >
              all 
            </div>
            <div
              class="gDxUWx"
            >
              accounts 7
            </div>
            <div
              class="dAAFPm"
            >
              assets 6
            </div>
          </nav>
        </div>
      </header>
      <div
        class="dqUUkh"
      >
        <div
          class="bgaVJI"
          data-testid="balance-group-cash"
        >
          <div
            class="fqIxbX"
          >
            <p
              class="dBzXnv"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="bqilBU"
            >
              $0
            </span>
          </div>
          <div
            class="bIsif"
          >
            No balances are available in this group.
          </div>
        </div>
        <div
          class="bgaVJI"
          data-testid="balance-group-debt"
        >
          <div
            class="mCiyX"
          >
            <p
              class="dBzXnv"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="bqilBU"
            >
              $0
            </span>
          </div>
          <div
            class="bIsif"
          >
            No balances are available in this group.
          </div>
        </div>
        <div
          class="bgaVJI"
          data-testid="balance-group-investments"
        >
          <div
            class="fCfgKI"
          >
            <p
              class="dBzXnv"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="bqilBU"
            >
              $120,045
            </span>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                cryptocurrency
              </div>
              <span
                class="bJfVYR"
              >
                $86,920
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/asset/Bitcoin"
                >
                  Bitcoin
                </a>
                <div
                  class="kkLQiS"
                >
                  Asset
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $69,420
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/asset/Ethereum"
                >
                  Ethereum
                </a>
                <div
                  class="kkLQiS"
                >
                  Asset
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $17,500
              </span>
            </div>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                security
              </div>
              <span
                class="bJfVYR"
              >
                $33,125
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/asset/Tesla"
                >
                  Tesla
                </a>
                <div
                  class="kkLQiS"
                >
                  Asset
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $30,000
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/asset/GameStop"
                >
                  GameStop
                </a>
                <div
                  class="kkLQiS"
                >
                  Asset
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $3,125
              </span>
            </div>
          </div>
        </div>
        <div
          class="bgaVJI"
          data-testid="balance-group-other-assets"
        >
          <div
            class="gUWRgq"
          >
            <p
              class="dBzXnv"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="bqilBU"
            >
              $53,000
            </span>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                vehicle
              </div>
              <span
                class="bJfVYR"
              >
                $38,500
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/asset/2022 Toyota RAV4"
                >
                  2022 Toyota RAV4
                </a>
                <div
                  class="kkLQiS"
                >
                  Asset
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $38,500
              </span>
            </div>
          </div>
          <div
            class="ejcGQ"
          >
            <div
              class="hXIxPe"
            >
              <div
                class="buXjmN"
              >
                collectible
              </div>
              <span
                class="bJfVYR"
              >
                $14,500
              </span>
            </div>
            <div
              class="hFiVJW"
            >
              <div>
                <a
                  class="hyBYuC"
                  href="#/asset/Pokemon Card Collection"
                >
                  Pokemon Card Collection
                </a>
                <div
                  class="kkLQiS"
                >
                  Asset
                </div>
              </div>
              <span
                class="fyAOWC"
              >
                $14,500
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
